--- a/Sage&Grace/sage-and-grace.html
+++ b/Sage&Grace/sage-and-grace.html
@@ -286,31 +286,31 @@
 
         <div class = "row d-flex justify-content-center">
             <div class = "col-sm-6">
-                <img src = "Images/designdecision1.png" class = "img-fluid mx-auto d-block" alt = "design decisions slide 1">
+                <img src = "Images/designdecision1.PNG" class = "img-fluid mx-auto d-block" alt = "design decisions slide 1">
             </div>
         </div>
 
         <div class = "row d-flex justify-content-center">
             <div class = "col-sm-6">
-                <img src = "Images/designdecision2.png" class = "img-fluid mx-auto d-block" alt = "design decisions slide 2">
+                <img src = "Images/designdecision2.PNG" class = "img-fluid mx-auto d-block" alt = "design decisions slide 2">
             </div>
         </div>
 
         <div class = "row d-flex justify-content-center">
             <div class = "col-sm-6">
-                <img src = "Images/designdecision3.png" class = "img-fluid mx-auto d-block" alt = "design decisions slide 3">
+                <img src = "Images/designdecision3.PNG" class = "img-fluid mx-auto d-block" alt = "design decisions slide 3">
             </div>
         </div>
 
         <div class = "row d-flex justify-content-center">
             <div class = "col-sm-6">
-                <img src = "Images/designdecision4.png" class = "img-fluid mx-auto d-block" alt = "design decisions slide 4">
+                <img src = "Images/designdecision4.PNG" class = "img-fluid mx-auto d-block" alt = "design decisions slide 4">
             </div>
         </div>
 
         <div class = "row d-flex justify-content-center">
             <div class = "col-sm-6">
-                <img src = "Images/designdecision5.png" class = "img-fluid mx-auto d-block" alt = "design decisions slide 5">
+                <img src = "Images/designdecision5.PNG" class = "img-fluid mx-auto d-block" alt = "design decisions slide 5">
             </div>
         </div>
 
@@ -327,7 +327,7 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
-                <p>The client was very appreciate of our work and found it extremely useful. She used our research and wireframes as a frmaework to build the website for Sage & Grace. Our user research helped her decide on the go-to-market strategy in launching her service.</p>
+                <p>The client was very appreciate of our work and found it extremely useful. She used our research and wireframes as a framework to build the website for Sage & Grace. Our user research helped her decide on the go-to-market strategy in launching her service.</p>
             </div>
         </div>
 
