--- a/DataViz/data-visualizations.html
+++ b/DataViz/data-visualizations.html
@@ -90,7 +90,32 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
-                <h2>Hate Crimes in USA (2013-2016</h2>
+                <h2>Being a Millennial Adult</h2>
+            </div>
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-6">
+                <p>Through this project, I attempted to create data portraits and art using survey responses collected from my friends. I asked some simple yet interesting questions to dig deeper into what does a typical young millennial think like.</p>
+            </div>
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-6">
+                <a id="cta" target="_blank" href="https://medium.com/@rutagokhale/the-data-is-in-the-art-b97cf2ceda7c?source=friends_link&sk=b71bd6f3c8b4983596d1ac58d762b80e" class="btn btn-primary" role="button">Link to project</a>
+            </div>
+        </div>
+
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-6">
+                <h2>Hate Crimes in USA (2013-2016)</h2>
             </div>
         </div>
 
