--- a/DataViz/data-visualizations.html
+++ b/DataViz/data-visualizations.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Kalam:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gaegu:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 
 
@@ -178,31 +178,6 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
                 <a id="cta" target="_blank" href="Images/foodencounters.jpg" class="btn btn-primary" role="button">Link to project</a>
-            </div>
-        </div>
-
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <h2>Golden Ratio</h2>
-            </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>Inspired by Nadieh Bremer's <a target="_blank" href="https://www.visualcinnamon.com/portfolio/the-art-in-pi" id = "link">Art in Pi</a> project, I decided to explore another beautiful mathematical constant called the <a target="_blank" href="https://en.wikipedia.org/wiki/Golden_ratio" id = "link">Golden Ratio</a>. Golden Ratio appers in nature, and creates pleasing aesthetics. I used Adobe Illustrator to represent the value of this number.</p>
-            </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <a id="cta" target="_blank" href="Images/goldenratio.png" class="btn btn-primary" role="button">Link to project</a>
             </div>
         </div>
 
