data viz page updated

--- a/DataViz/data-visualizations.html
+++ b/DataViz/data-visualizations.html
@@ -76,18 +76,6 @@
         <div class = "small-spacer">
         </div>
 
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p><span id="imp">These are some of the information visualization projects that I have worked on:</span></p>
-            </div>
-        </div>
-
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
-
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
                 <h2>Being a Millennial Adult</h2>
@@ -95,16 +83,15 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>Through this project, I attempted to create data portraits and art using survey responses collected from my friends. I asked some simple yet interesting questions to dig deeper into what does a typical young millennial think like.</p>
-            </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
+            <div class = "col-sm-3">
+                <p>I asked my friends and acquaintances to fill out a survey. I wanted to collectively look at the results and create a snapshot of how we, as young millennials think. I created 3 different visualizations, each designed to focus on a specific aspect of the collected data. The quick results of this survey can be found <a target="_blank" href="Images/Being a Millennial Adult/SurveyResults.pdf" id = "link">here</a>.</p>
                 <a id="cta" target="_blank" href="https://medium.com/@rutagokhale/the-data-is-in-the-art-b97cf2ceda7c?source=friends_link&sk=b71bd6f3c8b4983596d1ac58d762b80e" class="btn btn-primary" role="button">Link to project</a>
             </div>
+            <div class= "col-sm-3">
+                <img src = "Images/Being a Millennial Adult/thumbnail.png" class = "card-img-top img-fluid" alt = "Week of food encounters thumbnail">
+            </div>
         </div>
+
 
         <div class = "small-spacer">
         </div>
@@ -115,19 +102,17 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
-                <h2>Hate Crimes in USA (2013-2016)</h2>
+                <h2>Week of Food Encounters</h2>
             </div>
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>In this team project, we explored the distribution of hate crimes across United States, and showed the geographical differences for various years and states. We did the visualiztions using D3 library.</p>
+            <div class = "col-sm-4">
+                <p>Inspired by Giorgia Lupi's <a target="_blank" href="http://giorgialupi.com/dear-data/" id = "link">Dear Data</a> project, I decided to draw one myself. I wanted to illustrate my diet for a week. It wasn't meant to count my calorie, carb, protein, fat or sugar intake, but understand the consistency of my eating habits. This project tested my data logging skills. The hand-drawn result revealed that while my meal times were often late, they were at least consistent. Additionally I realized how many small yet noteworthy portions of processed foods I was eating.</p>
+                <a id="cta" target="_blank" href="Images/Week Of Food Encounters/WeekOfFoodEncounters.pdf" class="btn btn-primary" role="button">Link to project</a>
             </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <a id="cta" target="_blank" href="https://pandeymauli.github.io/hate-crimes-in-usa/" class="btn btn-primary" role="button">Link to project</a>
+            <div class= "col-sm-2">
+                <img src = "Images/Week Of Food Encounters/thumbnail.png" class = "card-img-top img-fluid" alt = "Week of food encounters thumbnail">
             </div>
         </div>
 
@@ -145,16 +130,15 @@
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>With this visualization, I've attempted to simplify these equations, so that one may easily understand the food-cycle population patterns in nature. I used D3 library for drawing the graphs.</p>
-            </div>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
+            <div class = "col-sm-3">
+                <p>In this project, I wanted to simplify a complex science topic. I leveraged the power of storytelling to make the mathematical equations more enjoyable and compelling. I attempted to explain the food-cylce population patterns in nature using animated graphs. To build this, I used JavaScript d3 library to easily render graphs and enable interactivity.</p>
                 <a id="cta" target="_blank" href="https://rutagokhale.github.io/lotka-volterra-equations/" class="btn btn-primary" role="button">Link to project</a>
             </div>
+            <div class= "col-sm-3">
+                <img src = "Images/Lotka Volterra Equations/thumbnail.png" class = "card-img-top img-fluid" alt = "Week of food encounters thumbnail">
+            </div>
         </div>
+
 
         <div class = "small-spacer">
         </div>
@@ -165,28 +149,25 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
-                <h2>Week of Food Encounters</h2>
+                <h2>The Golden Ratio</h2>
             </div>
         </div>
 
         <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <p>Inspired by Giorgia Lupi's <a target="_blank" href="http://giorgialupi.com/dear-data/" id = "link">Dear Data</a> project, I decided to draw one myself. I wanted to illustrate my diet for a week. It wasn't meant to count my calorie, carb, protein, fat or sugar intake, but understand how consistent my eating habits were. It was a fun data + art project, which tested my data logging skills as well!</p>
+            <div class = "col-sm-4">
+                <p>Inspired by Nadieh Bremer's <a target="_blank" href="https://www.visualcinnamon.com/portfolio/the-art-in-pi" id = "link">The Art in pi</a> project and my love for mathematics, I created a visualization of another important math constant - <a target="_blank" href="https://www.canva.com/learn/what-is-the-golden-ratio/" id = "link">The Golden Ratio</a>. This number had first caught my attention a few years back when I read Dan Brown's book The Da Vinci Code, and its presence in our everyday lives seemed very intriguing. I used Illustrator to represent this number and leveraged the number's visual pattern to illustrate its digits.</p>
+                <a id="cta" target="_blank" href="Images/The Golden Ratio/TheGoldenRatio.pdf" class="btn btn-primary" role="button">Link to project</a>
+            </div>
+            <div class= "col-sm-2">
+                <img src = "Images/The Golden Ratio/thumbnail.png" class = "card-img-top img-fluid" alt = "Week of food encounters thumbnail">
             </div>
         </div>
 
-        <div class = "d-flex justify-content-center">
-            <div class = "col-sm-6">
-                <a id="cta" target="_blank" href="Images/foodencounters.jpg" class="btn btn-primary" role="button">Link to project</a>
-            </div>
+        <div class = "spacer">
+        </div>
+        <div class = "small-spacer">
         </div>
 
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
-        <div class = "small-spacer">
-        </div>
 
         <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
             <footer class = "footer">
