--- a/DataViz/data-visualizations.html
+++ b/DataViz/data-visualizations.html
@@ -135,7 +135,7 @@
                 <a id="cta" target="_blank" href="https://rutagokhale.github.io/lotka-volterra-equations/" class="btn btn-primary" role="button">Link to project</a>
             </div>
             <div class= "col-sm-3">
-                <img src = "Images/Lotka Volterra Equations/thumbnail.png" class = "card-img-top img-fluid" alt = "Lotka Volterra Equations thumbnail">
+                <img src = "Images/Lotka Volterra Equations/thumbnail.PNG" class = "card-img-top img-fluid" alt = "Lotka Volterra Equations thumbnail">
             </div>
         </div>
 
