--- a/index.html
+++ b/index.html
@@ -73,34 +73,77 @@
         <div class = "row d-flex justify-content-center">
             <div class="col-sm-8 m-1">
                 <p>I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. Currently, I work as a <a target="_blank" href="https://menloinnovations.com/services/high-tech-anthropology" id = "link">High-Tech Anthropologist&reg;</a> at Menlo Innovations, consulting clients to create worthwhile experiences through the use of various design processes. My role involves doing paired UX design, user discovery, close collaboration with developers, and utilizing Lean and Agile processes to produce deliverables iteratively.</p>
-                <p>I document about my experiments in design through <a target="_blank" href="https://medium.com/@rutagokhale" id = "link">Medium posts</a>. I live in the beautiful town of Ann Arbor. Get in touch and say hi, I am always down for a cup of coffee! You can reach me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
+                <p>I am looking to switch roles. Get in touch and say hi, I would love to connect with you. You can reach me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
             </div>
         </div>
     </div>
 
-    <div id = "projects">
+    <div id = "medium">
     </div>
     <div class = "small-spacer">
     </div>
 
     <div class = "container container-fluid" id = "project-container">
         <div class = "d-flex justify-content-center">
-            <h2>Projects</h2>
+            <h2>Medium Articles</h2>
         </div>
 
+        <div class = "d-flex justify-content-center">
+            <p>I pen down my thoughts about design through Medium posts. View more of these <a target="_blank" href="https://medium.com/@rutagokhale" id = "link">here</a>.</p>
+        </div>
+
+
         <div class = "row d-flex justify-content-center">
-            <div class = "card-deck col-md-12">
-                <div class = "card m-2">
-                    <a href = "DataViz/data-visualizations.html">
-                        <img src = "Assets/Images/infoviz-thumbnail.png" class = "card-img-top img-fluid" alt = "Media Burn Archive project thumbnail">
+
+            <div class = "card-deck col-md-10">
+                <div class = "card">
+                    <a target="_blank" href = "https://uxdesign.cc/a-non-designers-guide-to-ux-design-210bb6662cae?source=friends_link&sk=abd50b9e3af368435e9d3b9e4618a16c">
+                        <img src = "Assets/Images/ux.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
                         <div class="card-body">
-                            <h3 class = "card-title">Data Visualizations</h3>
-                            <p class = "card-text">I created visualizations and art to better understand and interpret, data and information.</p>
+                            <h4 class = "card-title">A non-designer’s guide to UX design</h4>
+                            <p class = "card-text">All the design related jargon you would ever want to know</p>
                         </div>
                     </a>
                 </div>
 
-                <div class = "card m-2">
+                <div class = "card">
+                    <a target="_blank" href = "https://uxdesign.cc/critique-as-a-powerful-tool-in-your-design-toolkit-d5e4634b0fad?source=friends_link&sk=b6acea94c37e40e56f7c54d992db543e">
+                        <img src = "Assets/Images/critique.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
+                        <div class="card-body">
+                            <h4 class = "card-title">Critique as a powerful tool in your design toolkit</h4>
+                            <p class = "card-text">9 tips on receiving and giving a design critique</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class = "card">
+                    <a target="_blank" href = "https://uxdesign.cc/how-to-evaluate-an-experience-d34546e8bef4?source=friends_link&sk=a28f5c81fffcd065f48ecec9a15f1cb6">
+                        <img src = "Assets/Images/experience.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
+                        <div class="card-body">
+                            <h4 class = "card-title">How to evaluate an experience?</h4>
+                            <p class = "card-text">Exploring the nuances in design</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id = "projects">
+    </div>
+    <div class = "spacer">
+    </div>
+
+    <div class = "container container-fluid" id = "project-container">
+        <div class = "d-flex justify-content-center">
+            <h2>UX Projects</h2>
+        </div>
+
+        <div class = "row d-flex justify-content-center">
+            <div class = "card-deck col-md-10">
+
+                <div class = "card m-3">
                     <a href = "TrueSafeConnect/truesafe-connect.html">
                         <img src = "Assets/Images/truesafeconnect-thumbnail.png" class = "card-img-top img-fluid" alt = "Sage and Grace project thumbnail">
                         <div class="card-body">
@@ -109,7 +152,7 @@
                         </div>
                     </a>
                 </div>
-                <div class = "card m-2">
+                <div class = "card m-3">
                     <a href = "MiServerReview/miserver-review.html">
                         <img src = "Assets/Images/miserver-thumbnail.png" class = "card-img-top img-fluid" alt = "True safe Connect project thumbnail">
                         <div class="card-body">
@@ -118,7 +161,7 @@
                         </div>
                     </a>
                 </div>
-                <div class = "card m-2">
+                <div class = "card m-3">
                     <a href = "Sage&Grace/sage-and-grace.html">
                         <img src = "Assets/Images/sageandgrace-thumbnail.png" class = "card-img-top img-fluid" alt = "Media Burn Archive project thumbnail">
                         <div class="card-body">
@@ -129,6 +172,57 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div id = "dataviz">
+    </div>
+    <div class = "spacer">
+    </div>
+
+    <div class = "container container-fluid" id = "project-container">
+        <div class = "d-flex justify-content-center">
+            <h2>Data Visualizations</h2>
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <p>I create visualizations and art to better understand and interpret, data and information. View more dataviz projects <a href="DataViz/data-visualizations.html" id = "link">here</a>.</p>
+        </div>
+
+
+        <div class = "row d-flex justify-content-center">
+            <div class = "card-deck col-md-10">
+                <div class = "card">
+                    <a target="_blank" href = "https://uxdesign.cc/a-non-designers-guide-to-ux-design-210bb6662cae?source=friends_link&sk=abd50b9e3af368435e9d3b9e4618a16c">
+                        <img src = "Assets/Images/millennialadult.png" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
+                        <div class="card-body">
+                            <h4 class = "card-title">Being a Millennial Adult</h4>
+                            <p class = "card-text">Leveraging colors, shapes, and doodles to understand soft and small data</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class = "card">
+                    <a target="_blank" href = "DataViz/Images/Week Of Food Encounters/WeekOfFoodEncounters.pdf">
+                        <img src = "Assets/Images/foodencounters.png" class = "card-img-top img-fluid" alt = "Food Encounters thumbnail">
+                        <div class="card-body">
+                            <h4 class = "card-title">Week of Food Encounters</h4>
+                            <p class = "card-text">I illustrated my diet and eating habits for week using hand drawn symbols.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class = "card">
+                    <a target="_blank" href = "https://rutagokhale.github.io/lotka-volterra-equations/">
+                        <img src = "Assets/Images/lotkavolterra.PNG" class = "card-img-top img-fluid" alt = "Lotka Volterra equations thumbnail">
+                        <div class="card-body">
+                            <h4 class = "card-title">Lotka Volterra equations</h4>
+                            <p class = "card-text">I built animated graphs to explain food-population patterns in nature.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
@@ -151,5 +245,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script async src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
 
 </body>
