fixed link of medium article

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class = "row d-flex justify-content-center">
             <div class="col-sm-8 m-1">
                 <p>I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. Currently, I work as a <a target="_blank" href="https://menloinnovations.com/services/high-tech-anthropology" id = "link">High-Tech Anthropologist&reg;</a> at Menlo Innovations, consulting clients to create worthwhile experiences through the use of various design processes. My role involves doing paired UX design, user discovery, close collaboration with developers, and utilizing Lean and Agile processes to produce deliverables iteratively.</p>
-                <p>I am looking to switch roles. Get in touch and say hi, I would love to connect with you. You can reach me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
+                <p>I am looking to switch roles, an opportunity in UX Design. Get in touch and say hi, I would love to connect with you. You can reach me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
             </div>
         </div>
     </div>
@@ -192,7 +192,7 @@
         <div class = "row d-flex justify-content-center">
             <div class = "card-deck col-md-10">
                 <div class = "card">
-                    <a target="_blank" href = "https://uxdesign.cc/a-non-designers-guide-to-ux-design-210bb6662cae?source=friends_link&sk=abd50b9e3af368435e9d3b9e4618a16c">
+                    <a target="_blank" href = "https://towardsdatascience.com/the-data-is-in-the-art-b97cf2ceda7c?source=friends_link&sk=b71bd6f3c8b4983596d1ac58d762b80e">
                         <img src = "Assets/Images/millennialadult.png" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
                         <div class="card-body">
                             <h4 class = "card-title">Being a Millennial Adult</h4>
