--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
                 <div class="col-sm-6 m-1">
                     <h1>Ruta Gokhale</h1>
                     <p><span id = "highlight">Hi there! I am an Experience Designer. I advocate for human-centered design.</span></p>
+                    <p>Design is a process, not a result. It is a mindset that helps you find the right solution to the right problem.</p>
                     <p>Every design choice that I make is in the interest of solving user’s problem. Often times, these problems come with their share of constraints, be it technical limitations or business goals. My job as a designer is to achieve the perfect balance while creating a positive experience for the user. And therefore, I believe two things are most essential to the craft of UX – empathy for the user and exploring creativity within the box.</p>
                 </div>
         </div>
 
         <div class = "row d-flex justify-content-center">
             <div class="col-sm-8 m-1">
-                <p>I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. Currently, I work as a <a target="_blank" href="https://menloinnovations.com/services/high-tech-anthropology" id = "link">High-Tech Anthropologist&reg;</a> at Menlo Innovations, consulting clients to create worthwhile experiences through the use of various design processes. My role involves doing paired UX design, user discovery, close collaboration with developers, and utilizing Lean and Agile processes to produce deliverables iteratively.</p>
-                <p>I am looking to switch roles, an opportunity in UX Design. Get in touch and say hi, I would love to connect with you. You can reach me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
+                <p>I completed my bachelors in Computer Science from University of Pune, India. I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. I work as a High-Tech Anthropologist® at Menlo Innovations, helping clients by creating worthwhile experiences through the use of various design processes.</p>
+                <p>Apart from work, I like painting with acrylics, cooking and watching The Office! Currently, I am looking to switch roles, opportunities in user experience and information design. Get in touch and say hi, I am always down for a cup of coffee! Alternatively, you can connect with me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
             </div>
         </div>
     </div>
