--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class = "row d-flex justify-content-center">
 
                 <div class="col-sm-2 m-1">
-                    <img src = "Assets/Images/ruta.png" class = "img-fluid d-block" alt="Ruta Gokhale photo" id = "profile-photo">
+                    <img src = "Assets/Images/ruta.png" class = "img-fluid d-block" width = 75% height = 75% alt="Ruta Gokhale photo" id = "profile-photo">
                 </div>
                 <div class="col-sm-6 m-1">
                     <h1>Ruta Gokhale</h1>
@@ -73,7 +73,7 @@
         <div class = "row d-flex justify-content-center">
             <div class="col-sm-8 m-1">
                 <p>Every design choice that I make is in the interest of solving user’s problem. Often times, these problems come with their share of constraints, be it technical limitations or business goals. My job as a designer is to achieve the perfect balance while creating a positive experience for the user. And therefore, I believe two things are most essential to the craft of UX – empathy for the user and exploring creativity within the box.</p>
-                <p>I completed my bachelors in Computer Science from University of Pune, India. I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. I work as a High-Tech Anthropologist® at Menlo Innovations, helping clients by creating worthwhile experiences through the use of various design processes.</p>
+                <p>I completed my bachelors in Computer Science from University of Pune, India. I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. I work as a <a href="Menlo/hta.html" id = "link">High-Tech Anthropologist® at Menlo Innovations</a>, helping clients by creating worthwhile experiences through the use of various design processes.</p>
                 <p>Apart from work, I like painting with acrylics, cooking and watching The Office! Currently, I am looking to switch roles, opportunities in user experience and information design. Get in touch and say hi, I am always down for a cup of coffee! Alternatively, you can connect with me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
             </div>
         </div>
