home page + dat viz pages

--- a/DataViz/data-visualizations.html
+++ b/DataViz/data-visualizations.html
@@ -78,6 +78,52 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
+                <h2>Visualization of The Office episodes</h2>
+            </div>
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-3">
+                <p>In this article, I visualized a text dataset using Python and R code. I created a visual interpretation of episodes of The Office TV show.</p>
+                <a id="cta" target="_blank" href="https://towardsdatascience.com/a-designers-guide-to-visualize-a-text-dataset-1d534756e914" class="btn btn-primary" role="button">Link to project</a>
+            </div>
+            <div class= "col-sm-3">
+                <img src = "Images/The Office visualization/thumbnail.png" class = "card-img-top img-fluid" alt = "Data Visualization Society data badges thumbnail">
+            </div>
+        </div>
+
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-6">
+                <h2>Paint me a portrait!</h2>
+            </div>
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-3">
+                <p>I was invited to design data portraits for the members of Data Visualization Society (DVS). I designed butterfly data badges for <a target="_blank" href="https://www.datavisualizationsociety.com/" id = "link">DVS</a>, which aims to collect and establish best practices, fostering a community that supports members as they grow and develop data visualization skills.</p>
+                <a id="cta" target="_blank" href="https://medium.com/nightingale/paint-me-a-portrait-89c6144ae168" class="btn btn-primary" role="button">Link to project</a>
+            </div>
+            <div class= "col-sm-3">
+                <img src = "Images/DVS portraits/thumbnail.png" class = "card-img-top img-fluid" alt = "Data Visualization Society data badges thumbnail">
+            </div>
+        </div>
+
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-6">
                 <h2>Being a Millennial Adult</h2>
             </div>
         </div>
@@ -85,7 +131,7 @@
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-3">
                 <p>I asked my friends and acquaintances to fill out a survey. I wanted to collectively look at the results and create a snapshot of how we, as young millennials think. I created 3 different visualizations, each designed to focus on a specific aspect of the collected data. The quick results of this survey can be found <a target="_blank" href="Images/Being a Millennial Adult/SurveyResults.pdf" id = "link">here</a>.</p>
-                <a id="cta" target="_blank" href="https://medium.com/@rutagokhale/the-data-is-in-the-art-b97cf2ceda7c?source=friends_link&sk=b71bd6f3c8b4983596d1ac58d762b80e" class="btn btn-primary" role="button">Link to project</a>
+                <a id="cta" target="_blank" href="https://towardsdatascience.com/the-data-is-in-the-art-b97cf2ceda7c" class="btn btn-primary" role="button">Link to project</a>
             </div>
             <div class= "col-sm-3">
                 <img src = "Images/Being a Millennial Adult/thumbnail.png" class = "card-img-top img-fluid" alt = "Week of food encounters thumbnail">
