--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class = "row d-flex justify-content-center">
             <div class="col-sm-8 m-1">
                 <p>Every design choice that I make is in the interest of solving user’s problem. Often times, these problems come with their share of constraints, be it technical limitations or business goals. My job as a designer is to achieve the perfect balance while creating a positive experience for the user. And therefore, I believe two things are most essential to the craft of UX – empathy for the user and exploring creativity within the box.</p>
-                <p>I completed my bachelors in Computer Science from University of Pune, India. I completed my Bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. I work as a <a href="Menlo/hta.html" id = "link">High-Tech Anthropologist® at Menlo Innovations</a>, helping clients by creating worthwhile experiences through the use of various design processes.</p>
-                <p>Apart from work, I like painting with acrylics, cooking and watching The Office! Currently, I am looking to switch roles, opportunities in user experience and information design. Get in touch and say hi, I am always down for a cup of coffee! Alternatively, you can connect with me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
+                <p>I completed my bachelors in Computer Science from University of Pune, India. I then pursued a career in design and graduated from University of Michigan with a masters in Human-Computer Interaction. I work as a User Experience Designer at Thomson Reuters, designing for and improving the experience of enterprise products. Prior to that, I worked as a High-Tech Anthropologist® at Menlo Innovations, to create worthwhile products and experiences for clients and their users.</p>
+                <p>Apart from work, I like painting with acrylics, travelling where I haven't been, and binge watching TV shows! I also pen down my thoughts about design and other projects through <a target="_blank" href="https://medium.com/@rutagokhale" id = "link">Medium posts</a>. Get in touch and say hi, I am always down for a cup of coffee! Alternatively, you can connect with me through email at <a target="_blank" href="mailto:ruta.gokhale6@gmail.com" id = "link">ruta.gokhale6@gmail.com</a> or <a target="_blank" href="https://www.linkedin.com/in/rutagokhale/" id = "link">LinkedIn</a>.</p>
             </div>
         </div>
     </div>
@@ -82,58 +82,6 @@
     <div id = "medium">
     </div>
     <div class = "small-spacer">
-    </div>
-
-    <div class = "container container-fluid" id = "project-container">
-        <div class = "d-flex justify-content-center">
-            <h2>Medium Articles</h2>
-        </div>
-
-        <div class = "d-flex justify-content-center">
-            <p>I pen down my thoughts about design through Medium posts. View more of these <a target="_blank" href="https://medium.com/@rutagokhale" id = "link">here</a>.</p>
-        </div>
-
-
-        <div class = "row d-flex justify-content-center">
-
-            <div class = "card-deck col-md-10">
-                <div class = "card">
-                    <a target="_blank" href = "https://uxdesign.cc/a-non-designers-guide-to-ux-design-210bb6662cae?source=friends_link&sk=abd50b9e3af368435e9d3b9e4618a16c">
-                        <img src = "Assets/Images/ux.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
-                        <div class="card-body">
-                            <h4 class = "card-title">A non-designer’s guide to UX design</h4>
-                            <p class = "card-text">All the design related jargon you would ever want to know</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class = "card">
-                    <a target="_blank" href = "https://uxdesign.cc/critique-as-a-powerful-tool-in-your-design-toolkit-d5e4634b0fad?source=friends_link&sk=b6acea94c37e40e56f7c54d992db543e">
-                        <img src = "Assets/Images/critique.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
-                        <div class="card-body">
-                            <h4 class = "card-title">Critique as a powerful tool in your design toolkit</h4>
-                            <p class = "card-text">9 tips on receiving and giving a design critique</p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class = "card">
-                    <a target="_blank" href = "https://uxdesign.cc/how-to-evaluate-an-experience-d34546e8bef4?source=friends_link&sk=a28f5c81fffcd065f48ecec9a15f1cb6">
-                        <img src = "Assets/Images/experience.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
-                        <div class="card-body">
-                            <h4 class = "card-title">How to evaluate an experience?</h4>
-                            <p class = "card-text">Exploring the nuances in design</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div id = "projects">
-    </div>
-    <div class = "spacer">
     </div>
 
     <div class = "container container-fluid" id = "project-container">
