updated dataviz sections

--- a/DataViz/data-visualizations.html
+++ b/DataViz/data-visualizations.html
@@ -101,6 +101,29 @@
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-6">
+                <h2>I Stopped Eating Cereal and Here’s Why…</h2>
+            </div>
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-3">
+                <p>In this article, I did a data-visual investigation into the health and nutrition of ready-to-eat breakfast cereals to create awareness about how unhealthy cereals really are.</p>
+                <a id="cta" target="_blank" href="https://heated.medium.com/i-stopped-eating-cereal-and-heres-why-32da3a90a522" class="btn btn-primary" role="button">Link to project</a>
+            </div>
+            <div class= "col-sm-3">
+                <img src = "Images/Cereal/thumbnail.jpg" class = "card-img-top img-fluid" alt = "Data Visualization Society data badges thumbnail">
+            </div>
+        </div>
+
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+        <div class = "small-spacer">
+        </div>
+
+        <div class = "d-flex justify-content-center">
+            <div class = "col-sm-6">
                 <h2>Paint me a portrait!</h2>
             </div>
         </div>
