--- a/index.html
+++ b/index.html
@@ -140,32 +140,33 @@
 
         <div class = "row d-flex justify-content-center">
             <div class = "card-deck col-md-10">
+
                 <div class = "card">
                     <a target="_blank" href = "https://towardsdatascience.com/the-data-is-in-the-art-b97cf2ceda7c?source=friends_link&sk=b71bd6f3c8b4983596d1ac58d762b80e">
                         <img src = "Assets/Images/millennialadult.png" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
                         <div class="card-body">
-                            <h4 class = "card-title">Being a Millennial Adult</h4>
-                            <p class = "card-text">Leveraging colors, shapes, and doodles to understand soft and small data</p>
+                            <h4 class = "card-title">Hand drawn DataViz</h4>
+                            <p class = "card-text">I used colors, shapes, and doodles to understand soft and small data collected from my friends.</p>
                         </div>
                     </a>
                 </div>
 
                 <div class = "card">
-                    <a target="_blank" href = "DataViz/Images/Week Of Food Encounters/WeekOfFoodEncounters.pdf">
-                        <img src = "Assets/Images/foodencounters.png" class = "card-img-top img-fluid" alt = "Food Encounters thumbnail">
+                    <a target="_blank" href = "https://heated.medium.com/i-stopped-eating-cereal-and-heres-why-32da3a90a522">
+                        <img src = "Assets/Images/cereal.jpg" class = "card-img-top img-fluid" alt = "Medium articles thumbnail">
                         <div class="card-body">
-                            <h4 class = "card-title">Week of Food Encounters</h4>
-                            <p class = "card-text">I illustrated my diet and eating habits for week using hand drawn symbols.</p>
+                            <h4 class = "card-title">Storytelling using Data</h4>
+                            <p class = "card-text">I did a data-visual investigation into the health and nutrition of ready-to-eat breakfast cereals.</p>
                         </div>
                     </a>
                 </div>
 
                 <div class = "card">
-                    <a target="_blank" href = "https://rutagokhale.github.io/lotka-volterra-equations/">
-                        <img src = "Assets/Images/lotkavolterra.PNG" class = "card-img-top img-fluid" alt = "Lotka Volterra equations thumbnail">
+                    <a target="_blank" href = "https://towardsdatascience.com/a-designers-guide-to-visualize-a-text-dataset-1d534756e914">
+                        <img src = "Assets/Images/theoffice.png" class = "card-img-top img-fluid" alt = "Lotka Volterra equations thumbnail">
                         <div class="card-body">
-                            <h4 class = "card-title">Lotka Volterra equations</h4>
-                            <p class = "card-text">I built animated graphs to explain food-population patterns in nature.</p>
+                            <h4 class = "card-title">Visualizing a Text Dataset</h4>
+                            <p class = "card-text">I built a visualization  from the text dataset of The Office episodes.</p>
                         </div>
                     </a>
                 </div>
