--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
                 <div class="card mx-4">
                     <a target="_blank" href="https://open.spotify.com/episode/5kBCDjCDsw9Sw6sWJcROcw?si=Jz1bNw6mT8eFiau_064I8w">
-                        <img src="Images/podcast.png" class = "card-img-top img-fluid" alt = "screenshot of the podcast episode as seen on Spotify">
+                        <img src="Images/podcast.PNG" class = "card-img-top img-fluid" alt = "screenshot of the podcast episode as seen on Spotify">
                         <div class="card-body">
                             <p>I recorded a podcast episode with my friend where we discussed understanding human behavior as part of our jobs and how it impacts us! Check it out.</p>
                         </div>
