changed 2 images to .PNG file

--- a/About/datavizprojects.html
+++ b/About/datavizprojects.html
@@ -124,7 +124,7 @@
 
                     <div class = "card m-2">
                         <a target="_blank" href = "DataVizImages/WeekOfFoodEncounters.pdf">
-                            <img src = "Images/foodencounters.png" class = "card-img-left img-fluid" alt = "">
+                            <img src = "Images/foodencounters.PNG" class = "card-img-left img-fluid" alt = "">
                             <div class="card-body">
                                 <h3 class = "card-title">Week of food encounters</h3>
                                 <p class = "card-text">I illustrated my diet for a week through hand drawn patterns, inspired by Giorgia Lupi's 'Dear Data' project. I realized my meal times were often late but consistent, and I was consuming a good proportion of processed foods each day.</p>
@@ -137,7 +137,7 @@
 
                     <div class = "card m-2">
                         <a target="_blank" href = "https://rutagokhale.github.io/lotka-volterra-equations/">
-                            <img src = "Images/lotkavolterra.png" class = "card-img-left img-fluid" alt = "">
+                            <img src = "Images/lotkavolterra.PNG" class = "card-img-left img-fluid" alt = "">
                             <div class="card-body">
                                 <h3 class = "card-title">Lotka Volterra equations</h3>
                                 <p class = "card-text">I created animated graphs using the JS d3 library to explain the food cycle and population patterns in nature using storytelling.</p>
