--- a/About/about-me.html
+++ b/About/about-me.html
@@ -81,15 +81,15 @@
                 <img src = "Images/portfoliopicture.jpeg" class = "img-fluid mx-auto d-block" alt = "photo of Ruta Gokhale">
             </div>
         </div>
-        
+
         <div class = "spacer">
         </div>
 
         <div class = "d-flex justify-content-center">
             <div class = "col-sm-8">
                 <p>Hi there, I am Ruta Gokhale, a User Experience Designer. I like chocolate chip cookies, walks in the park, and well-crafted experiences!</p>
-                <p>I believe design is a process, not a result. It is a mindset that helps you find the right solution to the right problem. After working for 3 years in the enterprise software space, I've come to realize, problems come with ambiguities and their fair share of constraints. And therefore, I think two things are most important to the craft of UX - empathy for the user and exploring creativity <i>within</i> the box.</p>
-                <p>I design web experiences for tax products at Thomson Reuters. Thanks to my job, I have a bit more insight into the work-life of an accountant! You can know more about my work <a id = "link" href="../Work/thomson-reuters.html">here</a>. Previously, I worked as a Product Designer at Menlo Innovations, a design and development agency.</p>
+                <p>I believe design is a process, not a result. It is a mindset that helps you find the right solution to the right problem. After working for 4 years in the enterprise software space, I've come to realize, problems come with ambiguities and their fair share of constraints. And therefore, I think two things are most important to the craft of UX - empathy for the user and exploring creativity <i>within</i> the box.</p>
+                <p>Right now, I design experiences at Collibra, a Data Intelligence and Data Governance company, which offers solutions for managing meta-data in an organization. I specifically work on Collibra Protect, a SaaS offering that enables privacy stewards to create policies that protect sensitive information and optimize access management. Previously I have worked as a UX Designer at Thomson Reuters and Product Designer at Menlo Innovations.</p>
                 <p>I have always thought of myself as a student of science with a passion for art. So when I stumbled upon the field of Design, I had to go for it! I completed my Bachelor's degree in Computer Science. I then pursued a Master's degree in Human-Computer Interaction from the University of Michigan, Ann Arbor (Go Blue!). Today, I consider myself lucky to work in a role where engineering, design, and people converge.</p>
                 <p>I would love to connect with you - you can get in touch with me through <a id = "link" target="_blank" href="https://www.linkedin.com/in/rutagokhale/">LinkedIn</a> or <a id = "link" target="_blank" href="mailto: ruta.gokhale6@gmail.com">email</a>. I am always down for a cup of hot coffee and a good conversation!</p>
             </div>
@@ -109,7 +109,7 @@
     <div class = "jumbotron jumbotron-fluid text-center" id = "page-footer">
         <footer class = "footer">
             <div class = "container-fluid">
-                <p class = "text-center" id = "text-footer">&copy; 2021 Ruta Gokhale. All rights reserved.</p>
+                <p class = "text-center" id = "text-footer">&copy; 2022 Ruta Gokhale. All rights reserved.</p>
             </div>
         </footer>
     </div>
